# minirel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_point_lookup.py  bench_throughput.py
src/minirel/: __init__.py  catalog.py  database.py  executor.py  expr.py  planner.py  repl.py  transaction.py  types.py  wal.py
src/minirel/index/: __init__.py  btree.py
src/minirel/sql/: __init__.py  ast.py  lexer.py  parser.py
src/minirel/storage/: __init__.py  buffer_pool.py  disk_manager.py  heap_file.py  page.py
tests/: test_btree.py  test_buffer_pool.py  test_catalog.py  test_database_end_to_end.py  test_disk_manager.py  test_heap_file.py  test_planner_executor.py  test_repl.py  test_sql_lexer_parser.py  test_transactions_mvcc.py  test_types.py  test_wal.py  test_wal_recovery.py
