[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minirel"
version = "0.1.0"
description = "A from-scratch relational database engine: paged storage, a B+-tree index, write-ahead logging, MVCC transactions, and a hand-written SQL front end."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yusra Faheem" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
minirel = "minirel.repl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
